the horror returns